# intelligent-terminal

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  NOTICE.md  OpenConsole.slnx  README.md  _build_msix_x64.cmd  custom.props  intelligent-terminal-crash-model-switching.md  shell-integration 1.ps1
.github/: copilot-instructions.md
doc/: building-installer.md  building.md  configuring-powershell-autofix.md  faq.md  installing-dependencies.md  quick-start-local-dev.md  (+3 more)
tools/wta/: AGENTS.md  Cargo.toml  Generate-Coverage.ps1  OVERVIEW.md  README.md  acp-multi-session-concurrency.md  cgmanifest.json
tools/wta/locales/: af-ZA.yml  am-ET.yml  ar-SA.yml  as-IN.yml  az-Latn-AZ.yml  bg-BG.yml  bn-IN.yml  bs-Latn-BA.yml  ca-ES.yml  ca-Es-VALENCIA.yml  cs-CZ.yml  cy-GB.yml  da-DK.yml  de-DE.yml  el-GR.yml  en-GB.yml  en-US.yml  es-ES.yml  es-MX.yml  et-EE.yml  eu-ES.yml  fa-IR.yml  fi-FI.yml  fil-PH.yml  fr-CA.yml  fr-FR.yml  ga-IE.yml  gd-gb.yml  gl-ES.yml  gu-IN.yml  he-IL.yml  hi-IN.yml  hr-HR.yml  hu-HU.yml  hy-AM.yml  id-ID.yml  is-IS.yml  it-IT.yml  ja-JP.yml  ka-GE.yml  (+49 more)
tools/wta/prompts/: auto-fix.md  terminal-agent.md
tools/wta/src/: agent_check.rs  agent_pane_origin.rs  agent_registry.rs  agent_sessions.rs  app.rs  cli_tests.rs  command_recall.rs  commands.rs  coordinator.rs  history_loader.rs  logging.rs  main.rs  resolve_command.rs  session_history.rs  session_registry.rs  slash_command_tests.rs  telemetry.rs  theme.rs  wsl_acp.rs
tools/wta/src/app/: turn_state.rs
tools/wta/src/helper/: mod.rs
tools/wta/src/master/: mod.rs
tools/wta/src/mcp/: resolve_command.rs
tools/wta/src/protocol/: mod.rs
tools/wta/src/protocol/acp/: client.rs  cwd_format.rs  mock_agent_tests.rs  mod.rs  model_select.rs  probe.rs  prompt.rs  session_list.rs  spawn.rs
tools/wta/src/ui/: agent_popup.rs  agents_view.rs  chat.rs  command_popup.rs  layout.rs  mod.rs  model_popup.rs
wta/: AGENTS.md  CUSTOMIZATION.md  Cargo.toml  OVERVIEW.md  PLAN.md  README.md  SKILLS.md  acp-multi-session-concurrency.md  check-hook-trace.ps1  sync-hooks.ps1  terminal-acp-shell-integration.md  wta-current-architecture.excalidraw  wta-terminal-copilot-workflow.excalidraw
wta/prompts/: auto-fix.md  terminal-agent.md
wta/src/: agent_check.rs  agent_hooks_installer.rs  agent_registry.rs  agent_sessions.rs  app.rs  commands.rs  coordinator.rs  event.rs  history_loader.rs  logging.rs  main.rs  osc52.rs  pane_context.rs  runtime_paths.rs  shared_host.rs  theme.rs  ui_trace.rs
wta/src/protocol/: mod.rs
wta/src/protocol/acp/: client.rs  mod.rs  prompt.rs
wta/src/shell/: mod.rs  shell_manager.rs
wta/src/shell/wt_channel/: cli_channel.rs  mod.rs  pipe_channel.rs  routed_channel.rs
wta/src/ui/: agents_view.rs  auth.rs  chat.rs  command_popup.rs  debug_panel.rs  fre_setup.rs  input.rs  layout.rs  mod.rs  permission.rs  recommendations.rs  setup.rs  shimmer.rs
wta/target-build-temp/: .rustc_info.json
wta/target-stage/acp-startup-trace/: .rustc_info.json
wta/wt-agent-hooks/: README.md
wta/wt-agent-hooks/claude/wt-agent-hooks/.claude-plugin/: plugin.json
wta/wt-agent-hooks/claude/wt-agent-hooks/hooks/: hooks.json
wta/wt-agent-hooks/copilot/.claude-plugin/: marketplace.json
wta/wt-agent-hooks/copilot/wt-agent-hooks/hooks/: hooks.json  send-event.ps1
wta/wt-agent-hooks/gemini-extension/: README.md  gemini-extension.json
wta/wt-agent-hooks/gemini-extension/hooks/: hooks.json
wta/wt-agent-hooks/hook-debug/: state-logger.ps1
(+336 files in other folders)
