[package]
name = "wta"
version = "0.1.0"
edition = "2021"
description = "Windows Terminal Agent — ACP TUI client / MCP tool server"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.10", features = ["unstable_session_model"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
textwrap = "0.16"
serde = { version = "1", features = ["derive"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
which = "7"
