[package]
name = "wta"
version = "0.1.0"
edition = "2021"
description = "Windows Terminal Agent — ACP TUI client / MCP tool server"
build = "build.rs"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
notify = "6"
futures = "0.3"
unicode-width = "0.2"
textwrap = "0.16"
# CommonMark parser used only at render time for agent-pane Markdown replies;
# WTA owns the terminal layout/wrapping so markers and hanging indents stay stable.
pulldown-cmark = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# Image decode/encode for clipboard-paste (Alt+V). Minimal feature set: decode
# the clipboard DIB (BMP) and re-encode to PNG for ACP `ContentBlock::Image`.
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# Microsoft's official ETW TraceLogging crate. Emits byte-identical events to
# the C++ TraceLoggingWrite() macros — see src/cascadia/TerminalApp/init.cpp
# for the matching provider GUID and src/cascadia/TerminalApp/AppLogic.cpp
# for the event-emission style we mirror here.
tracelogging = "1"
which = "7"
uuid = { version = "1", features = ["v4"] }
rust-i18n = "3"
sys-locale = "0.3"
# Damerau-Levenshtein string distance for autofix "did you mean" near-matches
# (issue #287). Already in the lockfile as a transitive dep of clap, so
# promoting it to a direct dep does not change the resolved graph.
strsim = "0.11"
